--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-photo-view": "^1.2.7",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
+    "swiper": "^11.2.6",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
