--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "8.0.6",
     "react-photo-view": "^1.2.7",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
