--- a/package.json
+++ b/package.json
@@ -20,19 +20,18 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
-    "react-markdown": "8.0.6",
     "react-photo-view": "^1.2.7",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
-    "swiper": "^11.2.6",
+    "swiper": "^11.2.8",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/node": "^22.13.5",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
@@ -50,7 +49,7 @@
     "postcss": "^8.5.3",
     "prettier": "3.5.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.7.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.24.1",
     "vite": "6.3.4",
     "vite-plugin-sitemap": "^0.7.1"
