--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-photo-view": "^1.2.7",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
